# Apollo2

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  premake5.lua
ApolloEngine/: CMakeLists.txt
ApolloEngine/src/Apollo/: Apollo.h  Application.h  Core.h  GameSettings.h  InputEvents.h  Window.cpp  Window.h
ApolloEngine/src/Apollo/event/: EventSystem.h  IEvent.h
ApolloEngine/src/Apollo/io/: InputEvents.h  ResourceManager.h
ApolloEngine/src/Apollo/logger/: Logger.cpp  Logger.h
ApolloEngine/src/Apollo/render/: Renderable.h  Shader.cpp  Shader.h  Texture.h
ApolloEngine/src/Apollo/render/2d/: DebugRenderer.cpp  DebugRenderer.h  OrthographicCamera.h  Sprite.cpp  Sprite.h  SpriteBatch.cpp  SpriteBatch.h
ApolloEngine/src/Apollo/render/2d/imgui/: ApolloImGui.cpp  ApolloImGui.h
ApolloEngine/src/Apollo/window/: Window.cpp  Window.h  WindowEvents.h
ApolloGame/: CMakeLists.txt
ApolloGame/src/Apollo/: Apollo.cpp  Player.cpp  Player.h
ApolloGame/src/Apollo/World/: Block.h  Chunk.cpp  Chunk.h  Planet.cpp  Planet.h  World.cpp  World.h  WorldTypes.cpp  WorldTypes.h
ApolloGame/src/Apollo/World/blocks/: BlockTickable.h
ApolloGame/src/Apollo/World/generation/: EarthWorldGenerator.cpp  EarthWorldGenerator.h  WorldGenerator.h
ApolloGame/src/Apollo/World/tileEntities/: TileEntity.cpp  TileEntity.h  TileEntityChest.cpp  TileEntityChest.h
ApolloGame/src/Apollo/render/: ChunkMesh.h  Rectangle.cpp  Rectangle.h  WorldRenderer.cpp  WorldRenderer.h
data/: debugShader.vert  imgui.ini  shader.vert  worldShader.frag  worldShader.vert
data/GameData/blocks/: air.json  grass.json
data/GameData/shaders/: debugShader.frag
data/blocks/: chest.json  dirt.json
premake/Box2D/: premake5.lua
premake/FastNoise/: premake5.lua
premake/glew/: premake5.lua
premake/glfw/: premake5.lua
premake/imgui/: premake5.lua
